# iban_validation

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  THIRD_PARTY_LICENCES.html  about.hbs  about.toml  requirements-python-release.txt  requirements-python.txt
.github/workflows/: build.yml  manual_release.yaml  release_build_python.yaml
core_iban_valid/: Cargo.toml
core_iban_valid/benches/: pre_calc.py  speed_bench.rs
core_iban_valid/data/: IBAN Example.txt  alphabets.json
core_iban_valid/src/: lib.rs
docs/: index.html
docs/pkg/: README.md  iban_validation_wasm.d.ts  iban_validation_wasm.js  iban_validation_wasm_bg.wasm  iban_validation_wasm_bg.wasm.d.ts  package.json
docs/polars_docs/: README.md  _config.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs
iban_validation_bench_py/: Makefile  README.md  gen_testfile.py  py_requirements.txt  test_iban_validation_py.py
iban_validation_bench_rs/: Cargo.toml  README.md
iban_validation_bench_rs/benches/: bench_ibv_rs.rs
iban_validation_bench_rs/criterion/bench_validate_iban_num/base/: sample.json  tukey.json
iban_validation_bench_rs/criterion/bench_validate_iban_num/new/: benchmark.json  estimates.json
iban_validation_bench_rs/criterion/bench_validate_iban_num/report/: index.html
iban_validation_bench_rs/criterion/bench_validate_iban_str/base/: estimates.json  sample.json
iban_validation_bench_rs/criterion/bench_validate_iban_str/new/: benchmark.json  tukey.json
iban_validation_bench_rs/criterion/bench_validate_iban_str/report/: index.html
iban_validation_bench_rs/criterion/bench_validate_iban_str_long/base/: estimates.json  sample.json
iban_validation_bench_rs/criterion/bench_validate_iban_str_long/new/: benchmark.json  tukey.json
iban_validation_bench_rs/criterion/bench_validate_iban_str_long/report/: index.html
iban_validation_bench_rs/criterion/iban_parser_sd/base/: estimates.json  sample.json  tukey.json
iban_validation_bench_rs/criterion/iban_parser_sd/change/: estimates.json
iban_validation_bench_rs/criterion/iban_parser_sd/new/: benchmark.json  estimates.json  sample.json  tukey.json
iban_validation_bench_rs/criterion/iban_parser_sd/report/: index.html
iban_validation_bench_rs/criterion/iban_short_sd/base/: benchmark.json  estimates.json  sample.json  tukey.json
iban_validation_bench_rs/criterion/iban_short_sd/change/: estimates.json
iban_validation_bench_rs/criterion/iban_short_sd/new/: estimates.json  sample.json  tukey.json
iban_validation_bench_rs/criterion/iban_short_sd/report/: index.html
iban_validation_bench_rs/criterion/iban_validate_sd/base/: estimates.json  sample.json  tukey.json
iban_validation_bench_rs/criterion/iban_validate_sd/change/: estimates.json
iban_validation_bench_rs/criterion/iban_validate_sd/new/: benchmark.json  estimates.json  sample.json  tukey.json
iban_validation_bench_rs/criterion/iban_validate_sd/report/: index.html
iban_validation_bench_rs/criterion/iban_validation_new_struct/base/: benchmark.json
iban_validation_bench_rs/criterion/iban_validation_new_struct/new/: estimates.json  sample.json  tukey.json
iban_validation_bench_rs/criterion/iban_validation_new_struct/report/: index.html
iban_validation_bench_rs/criterion/iban_validation_rs_sd/base/: estimates.json  sample.json  tukey.json
iban_validation_bench_rs/criterion/iban_validation_rs_sd/change/: estimates.json
iban_validation_bench_rs/criterion/iban_validation_rs_sd/new/: benchmark.json  estimates.json  sample.json  tukey.json
iban_validation_bench_rs/criterion/iban_validation_rs_sd/report/: index.html
iban_validation_bench_rs/criterion/report/: index.html
iban_validation_bench_rs/criterion/schwifty_sd/base/: benchmark.json  estimates.json  sample.json  tukey.json
iban_validation_bench_rs/criterion/schwifty_sd/change/: estimates.json
iban_validation_bench_rs/criterion/schwifty_sd/new/: estimates.json  sample.json  tukey.json
iban_validation_bench_rs/criterion/schwifty_sd/report/: index.html
iban_validation_bench_rs/src/: lib.rs
iban_validation_c/: Cargo.toml  README.md  example  temp_build.rs.old
iban_validation_c/examples/: bench.c  example.c  example.cpp  tests.c  tests_c
iban_validation_c/include/: iban_validation.h
iban_validation_c/src/: ffi.rs  lib.rs
iban_validation_core/: Cargo.toml
iban_validation_core/benches/: speed_bench.rs
iban_validation_core/src/: lib.rs
iban_validation_polars/: Cargo.toml  README.md  pyproject.toml
iban_validation_polars/conda/conda-recipe/: good_meta.yaml  meta.yaml  oldmeta_multiple.yaml
iban_validation_polars/examples/: process_csv.py
iban_validation_polars/src/: expression.rs
iban_validation_preprocess/: iban_registry_v100.txt  iban_registry_v101.txt  iban_registry_v99.txt  pre_process_registry.py  test_pre_process.py
iban_validation_py/: Cargo.toml  README.md  pyproject.toml
iban_validation_py/src/: lib.rs  test_python.py
iban_validation_rs/: Cargo.toml  README.md
iban_validation_rs/benches/: speed_bench.rs  speed_bench_divan.rs
iban_validation_rs/data/: iban_sourcefile.txt
iban_validation_rs/examples/: simple.rs
iban_validation_rs/src/: iban_definition.rs  lib.rs
iban_validation_wasm/: Cargo.toml  README.md  index.html  package.json
iban_validation_wasm/src/: lib.rs
polars_plugin/: Cargo.toml
polars_plugin/examples/: process_csv.py
polars_plugin/iban_expression_lib/: __init__.py
polars_plugin/src/: expression.rs
polars_plugin/tests/: pibans.py  test_polars_plugin.py
python_wrapper/: Cargo.toml  build.rs  prep_build.sh
python_wrapper/src/: lib.rs  test_python.py
registry_preprocess/: iban_registry_v98.txt  iban_registry_v98.txt.json  pre_process_registry.py  temporary.csv  test_pre_process.py
wasm_wrapper/: Cargo.toml
