[package]
name = "iban_validation_bench_rs"
version = { workspace = true }
edition = { workspace = true }
authors = [ "Eric Quéré" ]
readme = "README.md"
homepage = "https://github.com/ericqu/iban_validation"
license = "MIT"
repository = "https://github.com/ericqu/iban_validation"
description = "Benchmark iban_validation_rs against similar libraries"

[dependencies]
iban_parser = {package="iban_parser", version="0.2"}
iban_short = {package= "iban", version= "0.2"}
iban_validate = {package = "iban_validate", version="5.0"}
iban_validation_rs = "0.1"
schwifty = "0.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bench_ibv_rs"
harness = falsete