[package]
name = "iban_validation_polars"
version = "0.1.0"
edition = "2021"

[lib]
name = "iban_validation_polars"
crate-type = ["cdylib"]

[dependencies]
iban_validation_rs = {path = "../iban_validation_rs" }
# need 0.21 as required from pyo3-polars
pyo3 = {version = "0.21" ,  features = ["extension-module"] }
pyo3-polars = {version = "0.18" ,  features = ["derive", "dtype-struct", "dtype-array"] }
serde = {version = "*" ,  features = ["derive"] }
polars = {version = "*", features = ["dtype-struct", "dtype-array"] }
