[package]
name = "iban_validation_polars"
version = { workspace = true }
edition = "2021"
description = "A package to facilitate validation of IBANs and selecting Bank_id and Branch_id as a Polars plugin"
readme = "README.md"
authors = [
    "Eric" 
]
license = "MIT" 

[lib]
name = "iban_validation_polars"
crate-type = ["cdylib"]

[dependencies]
iban_validation_rs = {path = "../iban_validation_rs" }
# need 0.21 as required from pyo3-polars
pyo3 = {version = "0.21" ,  features = ["extension-module", "generate-import-lib"] }
pyo3-polars = {version = "0.18" ,  features = ["derive"] }
serde = {version = "*" ,  features = ["derive"] }
polars = {version = "0.44.2" }
