[package]
name = "iban_validation_py"
version = "0.1.0"
edition = "2021"

[lib]
name = "iban_validation_py"
crate-type = ["cdylib"]

[dependencies]
iban_validation_core = {path = "../iban_validation_core" }
maturin = "=1.7.1"
pyo3 = {version = "0.21" ,  features = ["extension-module"] }
ureq = "=2.9.7"
