[package]
name = "iban_validation_rs"
version = "0.1.0"
edition = "2021"
authors = [ "Eric Quéré" ]
readme = "README.md"
homepage = "https://github.com/ericqu/iban_validation"
license = "MIT"
repository = "https://github.com/ericqu/iban_validation"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "speed_bench"
harness = false
