[package]
name = "iban_validation_wasm"
version = { workspace = true }
edition = { workspace = true }
authors = [ "Eric Quéré" ]
readme = "README.md"
homepage = "https://github.com/ericqu/iban_validation"
license = "MIT"
repository = "https://github.com/ericqu/iban_validation"
description = "Facilitate validation of ibans and selecting Bank identifier and Branch identifier in Rust and presented in wasm."

[lib]
crate-type = ["cdylib"]
name = "iban_validation_wasm"

[dependencies]
wasm-bindgen = "0.2"
iban_validation_rs = {path = "../iban_validation_rs" }
